--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,35 @@
+h1, h2, h3, h4, h5, h6, p, small {
+    padding: 0;
+    margin: 0;
+}
+
 h1 {
     font-size: 2.7rem;
+   
 }
 
 h2 {
-    font-size: 40px;
+    font-size: 2.5rem;
+    font-weight: 600;
 }
 
 h3 {
-    font-size: 30px;
+    font-size: 2rem;
 }
 
 h4 {
     font-size: 20px;
+}
+
+h5 {
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+p {
+    font: 1.1rem;
+    font-weight: 500;
+    line-height: 1.3;
 }
 
 /********* BOTÕES *********/
@@ -29,7 +47,7 @@ h4 {
 }
 
 .btn-editar, .btn-excluir {
-    width: 80px;
+    width: 70px;
     color: #fff;
 }
 
@@ -48,7 +66,7 @@ h4 {
 }
 
 #app {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: #3D4053 !important;
     align-items: center;
 }
@@ -92,7 +110,7 @@ label {
 
 .form-control:focus{
     box-shadow: none !important;
-    border: 1px solid #00a0e0;
+    border: 1px solid #0084B8;
 }
 
 .login-page .btn-entrar, .btn-salvar {
@@ -166,3 +184,21 @@ ul {
     width: 70%;
 }
 
+
+/********* COMÉRCIOS *********/
+
+.imagem-comercio {
+    margin-right: 15px;
+}
+
+.dados-comercio {
+    padding-top: 0 !important;
+}
+
+.dados-comercio small {
+    color: #06C7C4;
+}
+
+.dados-comercio .telefone h5 {
+    font-weight: 600;
+}
