--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #fff;
+}
+
 h1, h2, h3, h4, h5, h6, p, small {
     padding: 0;
     margin: 0;
@@ -162,6 +166,7 @@ label {
 .content-child {
     padding: 0 80px;
     width: 100vw;
+    background-color: #fff;
 }
 
 /********* USUÁRIOS *********/
