--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+/********* GERAL *********/
+
 body{
     background-color: #fff;
 }
@@ -22,7 +24,8 @@ h3 {
 }
 
 h4 {
-    font-size: 20px;
+    font-size: 1.5rem;
+    font-weight: 700;
 }
 
 h5 {
@@ -30,11 +33,26 @@ h5 {
     font-weight: 400;
 }
 
+h6 {
+    font-size: 0.8rem;
+    font-weight: 700;
+    color: #0084B8;
+}
+
 p {
-    font: 1.1rem;
+    font-size: 0.9rem;
     font-weight: 500;
     line-height: 1.3;
 }
+
+.busca-nome input {
+    width: 350px !important;
+}
+
+table {
+    border: 1px solid #dee2e6;
+}
+
 
 /********* BOTÕES *********/
 
@@ -73,6 +91,13 @@ p {
     border-top-right-radius: 0 !important;
 }
 
+.btn-entrar, .btn-salvar {
+    background-color: #0084B8;
+    color: #fff;
+}
+
+
+
 /********* APP *********/
 
 .content {
@@ -103,6 +128,9 @@ p {
     font-weight: thin;
 }
 
+
+
+
 /********* LOGIN *********/
 
 .login-page .login-img {
@@ -127,16 +155,13 @@ label {
     border: 1px solid #0084B8;
 }
 
-.btn-entrar, .btn-salvar {
-    background-color: #0084B8;
-    color: #fff;
-}
-
 .login-page .btn-entrar, .login-page .btn-salvar {
     width: 100%;
 }
 
-/********* HOME *********/
+
+
+/********* PAINEL *********/
 
 .home-page .nav-row, .gerenciamento{
     padding: 0 80px !important;
@@ -161,11 +186,6 @@ label {
 .hr-menu {
     margin: 0;
     border-color:  #0084B8;
-}
-
-.faixa {
-    background-color: #FFD800;
-    min-height: 30px;
 }
 
 .content-child {
@@ -225,10 +245,6 @@ ul {
     padding:  20px !important;
 }
 
-.busca-nome input {
-    width: 350px !important;
-}
-
 .painel-empresas .busca-categoria select{
     border-bottom-left-radius: 0 !important;
     border-top-left-radius: 0 !important;
@@ -239,3 +255,24 @@ ul {
 .painel-noticias .botoes {
     margin-left: 2px;
 }
+
+.painel-nova-noticia .categoria label, .painel-nova-noticia .autor label {
+    height: 37px;
+}
+
+.painel-nova-noticia .categoria {
+    vertical-align: bottom;
+}
+
+.arquivo label {
+    height: 37px;
+}
+
+.painel-noticias .imagem-noticia img{
+    width: 250px;
+    height: 160px;
+    object-fit: cover;
+}
+
+
+
