--- a/public/css/painel.css
+++ b/public/css/painel.css
@@ -43,6 +43,7 @@ p {
     font-size: 0.9rem;
     font-weight: 500;
     line-height: 1.3;
+    color: #757575;       
 }
 
 .busca-nome input {
@@ -51,6 +52,10 @@ p {
 
 table {
     border: 1px solid #dee2e6;
+}
+
+.w-5{
+    display: none;
 }
 
 
