--- a/public/css/aviario.css
+++ b/public/css/aviario.css
@@ -1,3 +1,12 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .aviario-home h2{
     font-size: 2.1rem;
     font-weight: 700;
@@ -36,7 +45,7 @@
 
 .aviario-home .penultimo-post img {
     width: 100%;
-    height: 378px;
+    height: 332px;
     object-fit: cover;
 }
 
@@ -67,19 +76,19 @@
 }
 
 .aviario-home .posts-laterais img {
-    width: 280px;
-    height: 176px;
+    width: 100%;
+    height: 152px;
     object-fit: cover;
 }
 
 .aviario-home .posts-laterais:nth-child(1){
-    margin-bottom: 22px;
+    margin-bottom: 20px;
 }
 
 .aviario-home .previa {   
     width: 100%;      
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -92,4 +101,94 @@ a {
 a:hover {
     text-decoration: none;
     color: #333;
+}
+
+.box {
+    max-width: 140px;
+    height: 140px;
+    background-color: #FFD800;
+}
+
+
+.aviario-home .anuncios-laterais .anuncio:nth-child(1){
+    margin-bottom: 20px;
+}
+
+.anuncios-laterais img {
+    width: 100%;
+}
+
+.anuncios-laterais {
+    position: relative;
+    right: 0;
+}
+
+
+
+@media only screen and (min-width: 1400px) {
+    .aviario-home .penultimo-post img {
+        width: 100%;
+        height: 375px;
+        object-fit: cover;
+    }
+    
+    .aviario-home .posts-laterais img {
+        width: 100%;
+        height: 174px;
+        object-fit: cover;
+    }
+
+    .aviario-home .previa { 
+        -webkit-line-clamp: 3;
+    }
+
+    .anuncios-laterais img {
+        width: 100%;
+    }
+
+}
+
+@media only screen and (max-width: 414px) {
+
+    .aviario-home h2 {
+        font-size: 1.7rem;
+        line-height: 1.1;
+    }
+
+    .aviario-home .posts-laterais h4 {
+        font-size: 1rem;
+    }
+
+
+    .aviario-home .penultimo-post img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+
+    .aviario-home .posts-laterais {
+        margin-left: 0;
+        margin-top: 20px;
+    }
+    
+    .aviario-home .posts-laterais img {
+        width: 100%;
+        height: 120px;
+        object-fit: cover;
+    }
+
+    .aviario-home .previa { 
+        -webkit-line-clamp: 3;
+    }
+
+    .anuncios-laterais img {
+        width: 100%;
+    }
+
+    .clima-tempo input {
+        visibility: hidden;
+    }
+
+
+
 }
