--- a/public/css/aviario.css
+++ b/public/css/aviario.css
@@ -86,9 +86,8 @@ html,body
 .aviario-home .busca-guia-comercial {
     background-image: url('../img/bg-area-comercial.jpg');
     background-position: center;
-    height: 320px;
-    margin: 30px 0;
-    padding: 60px;
+    margin: 30px 0 45px;
+    padding: 60px 16px 40px 16px;
     color: #fff;
 }
 
@@ -104,6 +103,12 @@ html,body
 
 .aviario-home .busca-guia-comercial .rodape p {
     font-size: 14px;
+}
+
+.aviario-home .posts-secundarios img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 
 .aviario-home .anuncios-laterais .anuncio:nth-child(1){
@@ -244,6 +249,19 @@ html,body
         object-fit: cover;
     }
 
+    .aviario-home .posts-secundarios {
+        margin-left: 0;
+        margin-right: 0 !important;
+    }
+
+    .aviario-home .posts-secundarios img {
+        height: 120px;
+    }
+
+    .col-post-secundario {
+        padding-right: 0 ;
+    }
+
     .aviario-home .previa p { 
         -webkit-line-clamp: 3;
     }
@@ -263,9 +281,32 @@ html,body
         object-fit: cover;
     }
 
-    .row-post-lateral{
+    .row-post-lateral, .row-post-secundario{
         padding-right: 0 !important;
     }
+
+    .aviario-home .busca-guia-comercial h2 {
+        font-size: 28px;
+        line-height: 32px;
+        font-weight: bold;
+    }
+
+    .aviario-home .busca-guia-comercial p {
+        margin-top: 8px;
+        font-size: 16px;
+        line-height: 16px;
+    }
+
+    .aviario-home .busca-guia-comercial .procura-comercio {
+        width: 100%;
+        height: 45px;
+        margin: 20px 0;
+    }
+
+  
+    
+
+
 
 }
 
