--- a/public/css/aviario.css
+++ b/public/css/aviario.css
@@ -97,10 +97,53 @@ html,body
     font-size: 18px;
 }
 
-.aviario-home .busca-guia-comercial .procura-comercio {
-    width: 580px;
-    height: 45px;
+.aviario-home .busca-guia-comercial .area-procura-comercio {
     margin: 20px 0;
+    padding: 10px 15px;
+    width: 580px;
+    height: 40px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.navbar .area-procura-noticia {
+    width: 300px;
+    padding: 10px;
+    height: 40px;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.aviario-home .busca-guia-comercial .area-procura-comercio button, .navbar .area-procura-noticia button {
+    border: none;
+    background-color: transparent;
+}
+
+.aviario-home .busca-guia-comercial .area-procura-comercio button:focus, .navbar .area-procura-noticia button:focus {
+    outline: none;
+}
+
+
+.aviario-home .busca-guia-comercial .procura-comercio, .navbar .procura-noticia {
+    flex: 1;
+    height: 30px;
+    border: none;
+    outline: none;
+    font: 0.9rem;
+    padding-right: 15px;
+}
+
+.fa-search {
+    font-size: 16px;
+    color: #4d4d4d;
 }
 
 .aviario-home .busca-guia-comercial .rodape p {
@@ -175,6 +218,10 @@ footer p {
     font-size: 13px;
 }
 
+footer .navegacao {
+    padding-left: 40px;
+}
+
 
 @media only screen and (min-width: 1400px) {
     .aviario-home .penultimo-post img {
@@ -244,7 +291,7 @@ footer p {
     }
 }
 
-@media only screen and (max-width: 414px) {
+@media only screen and (max-width: 415px) {
 
     .aviario-home .penultimo-post img {
         width: 100%;
@@ -261,6 +308,10 @@ footer p {
         width: 100%;
         height: 120px;
         object-fit: cover;
+    }
+
+    .aviario-home .busca-guia-comercial .area-procura-comercio {
+        width: 382px;
     }
 
     .aviario-home .posts-secundarios {
@@ -311,11 +362,7 @@ footer p {
         line-height: 16px;
     }
 
-    .aviario-home .busca-guia-comercial .procura-comercio {
-        width: 100%;
-        height: 45px;
-        margin: 20px 0;
-    }
+    
 
     footer .logo, footer .dev-info, footer .navegacao {
         text-align: center !important;
@@ -323,13 +370,25 @@ footer p {
 
     footer .navegacao {
         margin: 15px 0;
+        padding-left: 0;
     }
 
     footer .dev-info p {
         line-height: 16px;
     }
 
+}
 
+@media only screen and (max-width: 380px) {
+    .aviario-home .busca-guia-comercial .area-procura-comercio {
+        width: 328px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .aviario-home .busca-guia-comercial .area-procura-comercio {
+        width: 296px;
+    }
 }
 
 .btn-enviar {
